--- a/config.env
+++ b/config.env
@@ -5,7 +5,8 @@
 AWS_KNOWLEDGE_BASE_ID=your_kb_id_here
 AWS_S3_BUCKET=your-s3-bucket-name
 AWS_REGION=us-east-1
+AWS_MODEL_ARN=arn:aws:bedrock:us-east-1:123456789012:inference-profile/my-inference-profile
 
 # AWS Credentials (if not using IAM roles)
-# AWS_ACCESS_KEY_ID=your_access_key
-# AWS_SECRET_ACCESS_KEY=your_secret_key
+AWS_ACCESS_KEY_ID=your_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_key
